--- a/app/favorite.template.html
+++ b/app/favorite.template.html
@@ -1,4 +1,5 @@
 <i class="glyphicon"
- [class.glyphicon-star-empty]='!isFavorite'
- [class.glyphicon-star]='isFavorite'
- (click)="onClick()"></i>
+  [class.glyphicon-star-empty]='!isFavorite'
+  [class.glyphicon-star]='isFavorite'
+  (click)="onClick()">
+</i>
