--- a/app/contact-form.template.html
+++ b/app/contact-form.template.html
@@ -1,4 +1,4 @@
-<form>
+<form #f="ngForm" (ngSubmit)="onSubmit(f)">
   <div class="form-group">
     <label for="firstName">First Name</label>
     <input ngControl="firstName"
@@ -35,5 +35,5 @@
       *ngIf="comment.touched && !comment.valid"
       >Comment is required</div>
   </div>
-  <button class="btn btn-primary" type="submit">Submit</button>
+  <button class="btn btn-primary" [disabled]="!f.valid" type="submit">Submit</button>
 </form>
