--- a/app/signup-form.template.html
+++ b/app/signup-form.template.html
@@ -7,9 +7,12 @@
             type="text"
             class="form-control"
             #username="ngForm">
+        <div *ngIf="username.control.pending">Checking for uniqueness...</div>
         <div class="alert alert-danger" *ngIf="username.touched && username.errors">
           <div *ngIf="username.errors.required">Username is required</div>
           <div *ngIf="username.errors.cannotContainSpace">Username cannot contain space</div>
+          <div *ngIf="username.errors.shouldBeUnique">The username is taken</div>
+          <div *ngIf="username.errors.invalidLogin">Username or password is invalid</div>
         </div>
     </div>
     <div class="form-group">
@@ -21,7 +24,7 @@
             class="form-control"
             #password="ngForm">
         <div
-          *ngIf="!password.valid"
+          *ngIf="password.touched && !password.valid"
           class="alert alert-danger">Password is required</div>
     </div>
     <button class="btn btn-primary" type="submit">Sign Up</button>
