--- a/app/password-form.template.html
+++ b/app/password-form.template.html
@@ -4,7 +4,7 @@
         <input
             ngControl="password"
             id="password"
-            type="text"
+            type="password"
             class="form-control"
             #password="ngForm">
         <div *ngIf="password.control.pending">Checking current passord...</div>
@@ -18,7 +18,7 @@
         <input
             ngControl="passwordNew"
             id="passwordNew"
-            type="text"
+            type="password"
             class="form-control"
             #passwordNew="ngForm">
         <div class="alert alert-danger" *ngIf="passwordNew.touched && passwordNew.errors">
@@ -33,7 +33,7 @@
         <input
             ngControl="passwordConfirm"
             id="passwordConfirm"
-            type="text"
+            type="password"
             class="form-control"
             #passwordConfirm="ngForm">
         <div class="alert alert-danger" *ngIf="passwordConfirm.touched && passwordConfirm.errors">
