--- a/part-2/index.html
+++ b/part-2/index.html
@@ -3,6 +3,7 @@
     <base href="/">
     <title>CRUD App</title>
     <link rel="stylesheet" href="/assets/stylesheets/bootstrap.css"></style>
+    <link rel="stylesheet" href="/assets/stylesheets/styles.css"></style>
     <!-- 1. Load libraries -->
     <script src="/node_modules/angular2/bundles/angular2-polyfills.js"></script>
     <script src="/node_modules/systemjs/dist/system.src.js"></script>
